--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://db:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 
@@ -11,3 +11,4 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 spring.application.name=office-room-api
 server.port=8085
+eureka.client.serviceUrl.defaultZone=${EUREKA_SERVER:http://localhost:8761/eureka/}
